kubernetes/music-api/music-api-deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: music-api-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: music-api
    spec:
      containers:
        - name: music-api
          imagePullPolicy: Always
          image: relyativistlab/music-app:1.0.0
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 5
      restartPolicy: Always
