kubernetes/music-api/music-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-music-api
spec:
  type: NodePort
  selector:
    app: music-api
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    name: tcp-5000
