kubernetes/music-api/ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: yarkin.music.app.com
    http:
      paths:
      - path:
        backend:
          serviceName: service-music-api
          servicePort: 5000
